--- a/ProgrammingAssignment2A/ProgrammingAssignment2A.csproj
+++ b/ProgrammingAssignment2A/ProgrammingAssignment2A.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="PanelTracker.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResetGame.cs" />
